define button components

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="sytlesheet" href="stylesheet/main.css" />
-    <link rel="sytlesheet" href="stylesheet/normalize.css" />
+    <link href="/stylesheet/main.css" rel="stylesheet" />
+    <link href="/stylesheet/normalize.css" rel="stylesheet" />
+
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button class="btn .btn--primary btn--block">Buy Now</button>
+    <a href="#" class="btn btn--accent btn--block">Buy Now</a>
+  </body>
 </html>
