--- a/index.html
+++ b/index.html
@@ -14,8 +14,5 @@
 
     <title>Document</title>
   </head>
-  <body>
-    <button class="btn .btn--primary btn--block">Buy Now</button>
-    <a href="#" class="btn btn--accent btn--block">Buy Now</a>
-  </body>
+  <body></body>
 </html>
