--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <title>Document</title>
   </head>
   <body>
+    <section class="block">
+      <h2 class="block__heading">Heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea illo
+        accusamus quo commodi maxime animi architecto iste cum unde
+        voluptatibus, voluptatum neque vitae enim fugiat reiciendis minus nisi
+        veniam rem.
+      </p>
+    </section>
+    <section class="block block--dark block--skewed-right">
+      <h2 class="block__heading">Heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea illo
+        accusamus quo commodi maxime animi architecto iste cum unde
+        voluptatibus, voluptatum neque vitae enim fugiat reiciendis minus nisi
+        veniam rem.
+      </p>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
