--- a/index.html
+++ b/index.html
@@ -15,6 +15,196 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav class="nav collapsible">
+        <a class="nav__brand" href="/"
+          ><img width="100%" src="/images/velocity9.png" alt="Logo"
+        /></a>
+        <svg class="icon icon--white nav__toggler">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list nav__list collapsible__content">
+          <li class="nav__item"><a href="#">Hosting</a></li>
+          <li class="nav__item"><a href="#">VPS</a></li>
+          <li class="nav__item"><a href="#">Domain</a></li>
+          <li class="nav__item"><a href="#">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="block__heading">Cloud Services for Pros</h1>
+          <p class="hero__tagline">
+            Lorem ipsum dolor sit amet consectetur 50 elit.
+          </p>
+          <a href="#" class="btn btn--accent btn--stretched">Get Started</a>
+        </header>
+        <img class="hero__image" src="images/banner.png" alt="" />
+      </div>
+    </section>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2>Starting at $4 per month</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adi ganakdlk kisha?</p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          class="input"
+          placeholder="Enter domain name here..."
+        />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
+        </button>
+      </div>
+      <ul class="list block-domains__prices">
+        <li><span class="badge badge--secondary">.com $9</span></li>
+        <li>.org $10</li>
+        <li>.ai $11</li>
+        <li>.me $6</li>
+        <li>.space $11</li>
+        <li>.sg $12</li>
+      </ul>
+    </section>
+    <section class="section block container">
+      <header class="block__header">
+        <h2>Host On the Fastest Cloud</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+          debitis, vel.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Easy to Use</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel natus
+            quos, reiciendis sed adipisci deleniti hic quisquam laboriosam magni
+            a quod, numquam nam explicabo, maxime iure et dolores animi! Labore.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/easy.jpg" alt="" />
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Wordpress Made Easy</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel natus
+            quos, reiciendis sed adipisci deleniti hic quisquam laboriosam magni
+            a quod, numquam nam explicabo, maxime iure et dolores animi! Labore.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/wordpress.jpg" alt="" />
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#growth"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Faster Websites</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel natus
+            quos, reiciendis sed adipisci deleniti hic quisquam laboriosam magni
+            a quod, numquam nam explicabo, maxime iure et dolores animi! Labore.
+          </p>
+          <a href="#" class="link-arrow">Learn more</a>
+        </div>
+        <img class="feature__image" src="images/fast.jpg" alt="" />
+      </article>
+    </section>
+    <sectiom class="container block block-plans">
+      <div class="grid grid--1x3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billng-cycle">/month</span>
+              <span class="badge badge--seconday badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the platform</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">item 1</li>
+                <li class="list__item">item 2</li>
+                <li class="list__item">item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billng-cycle">/month</span>
+              <span class="badge badge--primary badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the platform</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">item 1</li>
+                <li class="list__item">item 2</li>
+                <li class="list__item">item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billng-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% OFF</span>
+              <span class="plan__description">Easy start on the platform</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">item 1</li>
+                <li class="list__item">item 2</li>
+                <li class="list__item">item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="callout callout--primary">
+      <div class="grid grid--1x2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum
+            doloremque itaque veritatis inventore sed.
+          </p>
+        </div>
+        <a href="#" class="btn btn--secondary btn--stretched">Buy Now</a>
+      </div>
+    </div>
+    
+
     <script src="js/main.js"></script>
   </body>
 </html>
