--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Velocity9" />
+    <meta
+      property="og:description"
+      content="Velocity9 brings you the fastest way to bring your website online"
+    />
+    <meta
+      name="description"
+      content="Deploy your websites fast and in less than 60 seconds"
+    />
+    <title>Velocit9-Go Online for just $4</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link href="/stylesheet/main.css" rel="stylesheet" />
     <link href="/stylesheet/normalize.css" rel="stylesheet" />
-
-    <title>Document</title>
+    <link href="/stylesheet/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <header>
       <nav class="nav collapsible">
         <a class="nav__brand" href="/"
-          ><img width="100%" src="/images/velocity9.png" alt="Logo"
+          ><img src="/images/velocity9.png" alt="Logo"
         /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -56,7 +65,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -79,10 +88,14 @@
         </p>
       </header>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div
+          class="feature__content"
+          data-aos="fade-right"
+          data-aos-duration="5000"
+        >
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Easy to Use</h3>
@@ -96,10 +109,14 @@
         <img class="feature__image" src="images/easy.jpg" alt="" />
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div
+          class="feature__content"
+          data-aos="fade-left"
+          data-aos-duration="5000"
+        >
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -113,10 +130,14 @@
         <img class="feature__image" src="images/wordpress.jpg" alt="" />
       </article>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div
+          class="feature__content"
+          data-aos="fade-right"
+          data-aos-duration="5000"
+        >
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#growth"></use>
+              <use href="images/sprite.svg#growth"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Faster Websites</h3>
@@ -130,7 +151,7 @@
         <img class="feature__image" src="images/fast.jpg" alt="" />
       </article>
     </section>
-    <sectiom class="container block block-plans">
+    <section class="container block block-plans">
       <div class="grid grid--1x3">
         <div class="plan">
           <div class="card card--secondary">
@@ -191,7 +212,7 @@
         </div>
       </div>
     </section>
-    <div class="callout callout--primary">
+    <div class="container callout callout--primary">
       <div class="grid grid--1x2">
         <div class="callout__content">
           <h2 class="callout__heading">Ready to Get Started?</h2>
@@ -203,8 +224,65 @@
         <a href="#" class="btn btn--secondary btn--stretched">Buy Now</a>
       </div>
     </div>
-    
-
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Products</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Website Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Company</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affilliate</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Community</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Support</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use href="images/sprite.svg#chevron"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">System Status</a></li>
+            </ul>
+          </div>
+        </section>
+        <div class="footer__brand">
+          <img src="/images/velocity9.png" alt="brand logo" />
+          <p class="footer__copyright">Copyright 2021 Newerkey</p>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
